Perkin-UAT/force-app/main/default/objects/Global_Account__c/Global_Account__c.object-meta.xml
<CustomObject>
    <customHelpPage>Help_Account</customHelpPage>
    <description>Custom object used to manage and analyze &quot;groups&quot; of standard accounts for the purposes of establishing strategics and tactics for increased revenue growth and margin expansion.

Primarily used by Global Account Managers</description>
    <label>Global Account</label>
    <nameField>
        <label>Global Account Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>