Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_FY_Orders_Target__c.field-meta.xml
<CustomField>
    <fullName>GA_FY_Orders_Target__c</fullName>
    <description>The order/booking target for this Global Account program</description>
    <inlineHelpText>The order/booking target for this Global Account program</inlineHelpText>
    <label>FY Orders Target</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>