Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_FY_To_Plan__c.field-meta.xml
<CustomField>
    <fullName>GA_FY_To_Plan__c</fullName>
    <description>Performance to annual plan</description>
    <formula>1-( GA_FY_Orders_Target__c-GA_FY_Orders_Achieved__c )/ GA_FY_Orders_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Performance to annual plan</inlineHelpText>
    <label>FY % To Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>