Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_Objectives__c.field-meta.xml
<CustomField>
    <fullName>GA_Objectives__c</fullName>
    <description>List of plan objectives for this global account program</description>
    <inlineHelpText>List of plan objectives for this global account program</inlineHelpText>
    <label>Annual Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>