Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_Stakeholder_Mgmt_Plan__c.field-meta.xml
<CustomField>
    <fullName>GA_Stakeholder_Mgmt_Plan__c</fullName>
    <description>The approach the Global Account Plan Owner will take to achieving the annual target.</description>
    <inlineHelpText>The approach the Global Account Plan Owner will take to achieving the annual target.</inlineHelpText>
    <label>Stakeholder Management Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>