Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_SWOT_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>GA_SWOT_Opportunities__c</fullName>
    <description>Opportunities in achieving the annual target</description>
    <inlineHelpText>Opportunities in achieving the annual target</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>