Perkin-UAT/force-app/main/default/objects/Global_Account__c/fields/GA_SWOT_Threats__c.field-meta.xml
<CustomField>
    <fullName>GA_SWOT_Threats__c</fullName>
    <description>Threats to achieving the annual target</description>
    <inlineHelpText>Threats to achieving the annual target</inlineHelpText>
    <label>Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>