Perkin-UAT/force-app/main/default/objects/Global_Account__c/recordTypes/Global_Account.recordType-meta.xml
<RecordType>
    <fullName>Global_Account</fullName>
    <active>true</active>
    <description>Recordtype for records which belong to the Global Account Program</description>
    <label>Global Account</label>
</RecordType>