Perkin-UAT/force-app/main/default/objects/Global_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GA_Global_Account_Manager__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>GA_FY_Orders_Target__c</columns>
    <columns>GA_FY_Orders_Achieved__c</columns>
    <columns>GA_FY_To_Plan__c</columns>
    <columns>GA_Current_Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>