Perkin-UAT/force-app/main/default/objects/Global_Account__c/listViews/PerkinElmer_Key_Accounts.listView-meta.xml
<ListView>
    <fullName>PerkinElmer_Key_Accounts</fullName>
    <columns>GA_Global_Account_Manager__c</columns>
    <columns>NAME</columns>
    <columns>GA_FY_Orders_Target__c</columns>
    <columns>GA_FY_To_Plan__c</columns>
    <columns>GA_FY_Orders_Achieved__c</columns>
    <columns>GA_Current_Pipeline__c</columns>
    <columns>GA_Objectives__c</columns>
    <columns>GA_SWOT_Opportunities__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Global_Account__c.Global_Account</value>
    </filters>
    <filters>
        <field>GA_Global_Account_Manager__c</field>
        <operation>notContain</operation>
        <value>(Inactive),Macri,Verlinden,Wilchek,Haike</value>
    </filters>
    <label>PerkinElmer Key Accounts - CFY</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>